--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "license": "MIT",
   "packageManager": "pnpm@10.6.5",
   "dependencies": {
+    "archiver": "^7.0.1",
     "asciichart": "^1.5.25",
     "commander": "^12.0.0",
     "openai": "^4.103.0",
